Fix: overflow ✅

--- a/desafios/12/style.css
+++ b/desafios/12/style.css
@@ -10,10 +10,6 @@ html {
   font-size: 1.2rem;
 }
 
-body {
-  overflow: hidden;
-}
-
 h2, h3 {
   margin-bottom: 0.5rem;
 }
